tablet horizontal scroll bug fix

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -200,6 +200,10 @@
         right: 0px !important;
     }
 
+    .overflow {
+        overflow: hidden; /* fix tablet horizontal scrolling issue */
+    }
+
     .overlay {
         position: absolute;
         width: 100%;
